   the contacts from a user list.
 * extensions.conf now allows you to use keyword "same" to define an extension
   without actually specifying an extension.  It uses exactly the same pattern
   as previously used on the last "exten" line.  For example:
     exten => 123,1,NoOp(something)
     same  =>     n,SomethingElse()

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.0 to Asterisk 1.6.1  -------------
------------------------------------------------------------------------------

Device State Handling
---------------------
 * The event infrastructure in Asterisk got another big update to help support
    distributed events.  It currently supports distributed device state and
    distributed Voicemail MWI (Message Waiting Indication).  A new module has
    been merged, res_ais, which facilitates communicating events between servers.
    It uses the SAForum AIS (Service Availability Forum Application Interface
    Specification) CLM (Cluster Management) and EVT (Event) services to maintain
    a cluster of Asterisk servers, and to share events between them.  For more
    information on setting this up, see doc/distributed_devstate.txt.

Dialplan Functions
------------------
 * Added a new dialplan function, AST_CONFIG(), which allows you to access
   variables from an Asterisk configuration file.
 * The JACK_HOOK function now has a c() option to supply a custom client name.
 * Added two new dialplan functions from libspeex for audio gain control and 
   denoise, AGC() and DENOISE(). Both functions can be applied to the tx and 
   rx directions of a channel from the dialplan.
 * The SMDI_MSG_RETRIEVE function now has the ability to search for SMDI messages
   based on other parameters.  The default is still to search based on the
   forwarding station ID.  However, there are new options that allow you to search
   based on the message desk terminal ID, or the message desk number.